<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="Home"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/history"
        android:icon="@drawable/history_ic"
        android:title="History"
        app:showAsAction="always"/>

    <item
        android:id="@+id/empty"
        android:title=""/>

    <item
        android:id="@+id/stats"
        android:icon="@drawable/chart"
        android:title="Reports"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="Profile"
        app:showAsAction="always"/>

</menu>