...
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:fabCradleVerticalOffset="10dp"
        app:contentInsetStart="0dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:itemIconTint="@color/light_grey"
            app:itemTextColor="@color/light_grey"
            app:itemTextAppearanceActive="@font/josefin_sans_semibold"
            android:background="@drawable/background_transparent"
...
