...
                        app:layout_constraintHorizontal_bias="0.055"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.444" />

                    <TextView
                        android:id="@+id/sign_out"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/josefin_sans_semibold"
                        android:gravity="center"
                        android:text="Sign Out"
                        android:textAlignment="center"
...
